--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skill">Skill</a></li>
-            <li><a href="#project">Project</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -36,8 +35,8 @@
                 <p>Mahasiswa yang Sedang belajar dan mengembangkan kemampuan di bidang Web Development, UI/UX, serta Desain.</p>
                 <a href="#contact" class="btn">Contact Me</a>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/rindraabi"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/aweecxc/"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
@@ -50,7 +49,6 @@
             </div>
         </div>
         
-        <div class="scroll-indicator"></div>
     </section>
 
     <section id="about" class="about">
@@ -68,7 +66,6 @@
                     <div class="card-details">
                         <h3>Rindra Abi D.</h3>
                         <p>Web Developer</p>
-                        <div class="barcode">|| ||| || ||| ||</div>
                     </div>
                 </div>
             </div>
@@ -77,24 +74,10 @@
                 <h2>About Me <i class="fas fa-user-astronaut"></i></h2>
                 <h4>Creative Developer & Designer</h4>
                 <p>
-                    Halo! Saya adalah seseorang yang bercita-cita menjadi cyber security specialist dan engineering profesional.
+                    Halo! Saya adalah seseorang yang bercita-cita menjadi cyber security specialist dan network engineering profesional.
                     <br><br>
                     Dengan minat yang kuat di dunia teknologi, saya terus belajar dan mengembangkan kemampuan untuk mencapai tujuan tersebut. Keinginan saya adalah dapat membangun sistem yang aman, handal, serta mampu memberikan kontribusi dalam melindungi infrastruktur digital.
                 </p>
-                <div class="about-stats">
-                    <div class="stat-item">
-                        <h3>2+</h3>
-                        <p>Years Exp</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>10+</h3>
-                        <p>Projects</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>24/7</h3>
-                        <p>Support</p>
-                    </div>
-                </div>
                 <a href="#contact" class="btn">Hire Me</a>
             </div>
         </div>
@@ -131,67 +114,6 @@
         </div>
     </section>
 
-    <section id="project" class="project">
-        <div class="project-container">
-            <div class="section-title">
-                <h2>My Projects <i class="fas fa-laptop-code"></i></h2>
-                <p>Here are some of the projects I've worked on.</p>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="images/project1.jpg" alt="Project 1">
-                    </div>
-                    <div class="project-info">
-                        <h3>Portfolio Website</h3>
-                        <p>A responsive personal portfolio website built with HTML, CSS, and JavaScript with 3D elements.</p>
-                        <div class="project-tags">
-                            <span>HTML</span><span>CSS</span><span>JS</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn-small"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="images/project2.jpg" alt="Project 2">
-                    </div>
-                    <div class="project-info">
-                        <h3>E-Commerce UI</h3>
-                        <p>A modern e-commerce user interface design with cart functionality and product listing.</p>
-                        <div class="project-tags">
-                            <span>React</span><span>Figma</span><span>CSS</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn-small"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="images/project3.jpg" alt="Project 3">
-                    </div>
-                    <div class="project-info">
-                        <h3>Task Manager App</h3>
-                        <p>A productivity application to manage daily tasks, supporting drag-and-drop features.</p>
-                        <div class="project-tags">
-                            <span>JS</span><span>Local Storage</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="btn-small"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="experience" class="experience">
         <div class="experience-container">
@@ -257,21 +179,24 @@
                     </div>
                 </div>
 
-                <form class="contact-form">
-                    <div class="input-group">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="input-group">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="input-group">
-                        <input type="tel" placeholder="Phone Number" required>
-                    </div>
-                    <div class="input-group">
-                        <textarea rows="5" placeholder="Your Message" required></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send Message <i class="fas fa-paper-plane"></i></button>
-                </form>
+<form class="contact-form" id="contactForm">
+    <div class="input-group">
+        <input type="text" id="Name" placeholder="Your Name" required>
+    </div>
+    <div class="input-group">
+        <input type="email" id="Email" placeholder="Your Email" required>
+    </div>
+    <div class="input-group">
+        <input type="tel" id="Number" placeholder="Phone Number" required>
+    </div>
+    <div class="input-group">
+        <textarea rows="5" id="Message" placeholder="Your Message" required></textarea>
+    </div>
+    <button type="submit" class="btn">
+        Send Message <i class="fas fa-paper-plane"></i>
+    </button>
+</form>
+
 
             </div>
         </div>
