Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="experience-card">
                     <div class="exp-content">
                         <span class="exp-date">Dec 2024 - Apr 2025</span>
-                        <h3>PT Helium Sinergi Telekomunikasi Internship</h3>
+                        <h3>PT Helium Sinergi Telekomunikasi</h3>
                         <h4>NOC Network Operations Center</h4>
                         <p>Internship focused on monitoring network infrastructure, handling tickets, and ensuring network stability for clients.</p>
                     </div>
@@ -216,3 +216,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
