--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
     <footer>
         <p>&copy; 2025 <span>Rindra Abi Darmawansyah</span>. All Rights Reserved.</p>
         <div class="footer-social">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/rindraabi"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/aweecxc/"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </footer>
@@ -215,5 +215,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
