Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rindra Abi Darmawansyah - Portfolio</title>
+    <title>Rindra Abi Darmawansyah </title>
+    <meta name="description" content="Rindra Abi Darmawansyah adalah IT Network Engineer dan Web Developer dari Indonesia yang berfokus pada infrastruktur jaringan, sistem backend, automasi server, dan pengembangan aplikasi web.">
+    <meta name="keywords" content="Rindra Abi Darmawansyah, IT Network Engineer, Web Developer, Network Engineer Indonesia, Backend Developer">
+    <meta name="author" content="Rindra Abi Darmawansyah">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -215,6 +218,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
