--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rindra Abi Darmawansyah </title>
-    <meta name="description" content="Rindra Abi Darmawansyah adalah IT Network Engineer dan Web Developer dari Indonesia yang berfokus pada infrastruktur jaringan, sistem backend, automasi server, dan pengembangan aplikasi web.">
     <meta name="keywords" content="Rindra Abi Darmawansyah, IT Network Engineer, Web Developer, Network Engineer Indonesia, Backend Developer">
     <meta name="author" content="Rindra Abi Darmawansyah">
+    <link rel="canonical" href="https://rindraabi.my.id/">
+    <meta name="robots" content="index,follow,max-image-preview:large">
+    <meta property="og:title" content="Rindra Abi Darmawansyah | IT Network Engineer & Web Developer">
+    <meta property="og:description" content=" Rindra Abi Darmawansyah: Network Engineering, Web Development, Linux, MikroTik, dan automasi.">
+    <meta property="og:url" content="https://rindraabi.my.id/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://rindraabi.my.id/images/image_4.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -218,6 +227,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
