--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
     <meta property="og:url" content="https://rindraabi.my.id/">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://rindraabi.my.id/images/image_4.png">
-
     <meta name="twitter:card" content="summary_large_image">
-
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Rindra Abi Darmawansyah",
+  "url": "https://rindraabi.my.id/",
+  "jobTitle": "IT Network Engineer & Web Developer",
+  "sameAs": [
+    "https://github.com/rindraabi",
+    "https://www.instagram.com/aweecxc/"
+  ]
+}
+</script>
+
 </head>
 <body>
 
@@ -225,8 +237,10 @@
     <div class="background-animation" id="bgAnimation"></div>
 
     <script src="script.js"></script>
+    
 </body>
 </html>
+
 
 
 
