--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
             <span class="bar"></span>
         </div>
 
-        <ul class="nav-links">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skill">Skill</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+<ul class="nav-links">
+  <li><a href="index.html#home" class="active">Home</a></li>
+  <li><a href="index.html#about">About</a></li>
+  <li><a href="index.html#skill">Skill</a></li>
+  <li><a href="index.html#experience">Experience</a></li>
+  <li><a href="tools.html">Tools</a></li>
+  <li><a href="index.html#contact">Contact</a></li>
+</ul>
+
     </header>
 
     <section id="home" class="hero">
@@ -240,6 +242,7 @@
     
 </body>
 </html>
+
 
 
 
