--- a/tools.html
+++ b/tools.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   <style>
-    /* Tools page tweaks (tetap nyatu dengan style existing) */
+    /* Tools page tweaks */
     .tools-page {
       min-height: 100vh;
       padding: 120px 10% 100px 10%;
@@ -148,10 +148,46 @@
       color: #94a3b8;
       margin-left: auto;
     }
+    .vcc-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 10px;
+      margin-top: 15px;
+    }
+    .vcc-card {
+      background: rgba(168, 85, 247, 0.1);
+      border: 1px solid rgba(168, 85, 247, 0.3);
+      border-radius: 10px;
+      padding: 12px;
+      font-size: 11px;
+    }
+    .vcc-card h4 {
+      margin: 0 0 8px 0;
+      color: #a855f7;
+      font-size: 12px;
+    }
+    .vcc-field {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 4px;
+    }
+    .vcc-field span:first-child {
+      color: #94a3b8;
+    }
+    .vcc-field span:last-child {
+      color: #fff;
+      font-family: monospace;
+    }
+    .download-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 15px;
+    }
 
     @media screen and (max-width: 768px) {
       .tools-page { padding: 110px 5% 80px 5%; }
       .tools-head h1 { font-size: 34px; }
+      .vcc-grid { grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -183,8 +219,7 @@
       <div class="tools-head">
         <h1>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h1>
         <p>
-          Kumpulan tools berbasis API untuk kebutuhan network & domain checking.
-          Masukkan target, lalu klik <b>Run</b> untuk melihat hasilnya.
+          Kumpulan tools berbasis API untuk kebutuhan network, domain checking, VCC generator, dan NIK checker.
         </p>
       </div>
 
@@ -197,7 +232,7 @@
             <h3>Subdomain Finder</h3>
           </div>
           <div class="tool-desc">
-            Cari subdomain berdasarkan data sertifikat (CT logs). Output berupa list hasil.
+            Cari subdomain berdasarkan data sertifikat (CT logs).
           </div>
 
           <div class="tool-form">
@@ -223,7 +258,7 @@
             <h3>Check Hosting</h3>
           </div>
           <div class="tool-desc">
-            Cek web IP/provider, nameserver, mail route (jika tersedia dari API).
+            Cek web IP/provider, nameserver, mail route.
           </div>
 
           <div class="tool-form">
@@ -298,6 +333,63 @@
           </div>
 
           <pre class="tool-result" id="whoisResult"></pre>
+        </div>
+
+        <!-- 5) VCC Generator -->
+        <div class="tool-card" id="toolVcc">
+          <div class="tool-title">
+            <i class="fa-solid fa-credit-card"></i>
+            <h3>VCC Generator</h3>
+          </div>
+          <div class="tool-desc">
+            Generate Virtual Credit Card (test only). Pilih tipe kartu.
+          </div>
+
+          <div class="tool-form">
+            <select id="vccType">
+              <option value="visa">Visa</option>
+              <option value="mastercard">Mastercard</option>
+              <option value="american-express">American Express</option>
+              <option value="jcb">JCB</option>
+            </select>
+            <div class="tool-actions">
+              <button class="btn" id="btnVccRun" type="button">
+                Generate <i class="fa-solid fa-bolt"></i>
+              </button>
+              <button class="btn-secondary" id="btnVccClear" type="button">
+                Clear
+              </button>
+              <span class="tool-status" id="vccStatus"></span>
+            </div>
+          </div>
+
+          <div class="tool-result" id="vccResult"></div>
+        </div>
+
+        <!-- 6) NIK Checker -->
+        <div class="tool-card" id="toolNik">
+          <div class="tool-title">
+            <i class="fa-solid fa-id-card-clip"></i>
+            <h3>NIK Checker</h3>
+          </div>
+          <div class="tool-desc">
+            Cek validitas NIK 16 digit dan informasi terkait.
+          </div>
+
+          <div class="tool-form">
+            <input type="text" id="nikNumber" placeholder="NIK 16 digit (contoh: 3578162403050002)" maxlength="16" />
+            <div class="tool-actions">
+              <button class="btn" id="btnNikRun" type="button">
+                Check <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+              <button class="btn-secondary" id="btnNikClear" type="button">
+                Clear
+              </button>
+              <span class="tool-status" id="nikStatus"></span>
+            </div>
+          </div>
+
+          <pre class="tool-result" id="nikResult"></pre>
         </div>
 
       </div>
