--- a/tools.html
+++ b/tools.html
@@ -354,7 +354,7 @@
             </select>
             <div class="tool-actions">
               <button class="btn" id="btnVccRun" type="button">
-                Generate <i class="fa-solid fa-bolt"></i>
+                   Run <i class="fa-solid fa-play"></i>
               </button>
               <button class="btn-secondary" id="btnVccClear" type="button">
                 Clear
@@ -380,7 +380,7 @@
             <input type="text" id="nikNumber" placeholder="NIK 16 digit (contoh: 3578162403050002)" maxlength="16" />
             <div class="tool-actions">
               <button class="btn" id="btnNikRun" type="button">
-                Check <i class="fa-solid fa-magnifying-glass"></i>
+                   Run <i class="fa-solid fa-play"></i>
               </button>
               <button class="btn-secondary" id="btnNikClear" type="button">
                 Clear
