--- a/tools.html
+++ b/tools.html
@@ -236,7 +236,7 @@
           </div>
 
           <div class="tool-form">
-            <input type="text" id="subdomainDomain" placeholder="domain.tld (contoh: lambda.net.id)" />
+            <input type="text" id="subdomainDomain" placeholder="domain.tld (contoh: rindraabi.my.id)" />
             <div class="tool-actions">
               <button class="btn" id="btnSubdomainRun" type="button">
                 Run <i class="fa-solid fa-play"></i>
@@ -262,7 +262,7 @@
           </div>
 
           <div class="tool-form">
-            <input type="text" id="hostingDomain" placeholder="domain.tld (contoh: lambda.net.id)" />
+            <input type="text" id="hostingDomain" placeholder="domain.tld (contoh: rindraabi.my.id)" />
             <div class="tool-actions">
               <button class="btn" id="btnHostingRun" type="button">
                 Run <i class="fa-solid fa-play"></i>
@@ -288,7 +288,7 @@
           </div>
 
           <div class="tool-form">
-            <input type="text" id="portscanHost" placeholder="host / IP (contoh: 103.105.57.20)" />
+            <input type="text" id="portscanHost" placeholder="host / IP (contoh: 1.1.1.1)" />
             <input type="text" id="portscanPorts" placeholder="ports (contoh: top100 / 1-1000 / 22,80,443)" value="top100" />
             <select id="portscanType">
               <option value="quick">quick</option>
@@ -320,7 +320,7 @@
           </div>
 
           <div class="tool-form">
-            <input type="text" id="whoisDomain" placeholder="domain / IP (contoh: lambda.net.id)" />
+            <input type="text" id="whoisDomain" placeholder="domain / IP (contoh: rindraabi.my.id)" />
             <div class="tool-actions">
               <button class="btn" id="btnWhoisRun" type="button">
                 Run <i class="fa-solid fa-play"></i>
