--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content=" Rindra Abi Darmawansyah: Network Engineering, Web Development, Linux, MikroTik, dan automasi.">
     <meta property="og:url" content="https://rindraabi.my.id/">
     <meta property="og:type" content="website">
+    <link rel="icon" type="image/x-icon" href="https://rindraabi.my.id/images/image_4.png">
     <meta property="og:image" content="https://rindraabi.my.id/images/image_4.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="style.css">
@@ -242,6 +243,7 @@
     
 </body>
 </html>
+
 
 
 
