--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
@@ -26,10 +26,22 @@
   "jobTitle": "IT Network Engineer & Web Developer",
   "sameAs": [
     "https://github.com/rindraabi",
-    "https://www.instagram.com/aweecxc/"
+    "https://www.instagram.com/aweecxc/",
+    "https://www.tiktok.com/@rindra.abi"
+  ],
+  "worksFor": [
+    {
+      "@type": "Organization",
+      "name": "PT Lambda Sinergi Telekomunikasi"
+    },
+    {
+      "@type": "Organization",
+      "name": "PT Helium Sinergi Telekomunikasi"
+    }
   ]
 }
 </script>
+
 
 </head>
 <body>
@@ -243,6 +255,7 @@
     
 </body>
 </html>
+
 
 
 
