Revise tools description in tools.html
Updated tools description to include specific tools and author.

--- a/tools.html
+++ b/tools.html
@@ -218,9 +218,11 @@
     <div class="tools-wrap">
       <div class="tools-head">
         <h1>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h1>
-        <p>
-          Kumpulan tools berbasis API untuk kebutuhan network, domain checking, VCC generator, dan NIK checker.
-        </p>
+ <p>
+Tools by Rindra Abi Darmawansyah: Subdomain Finder, Hosting Checker, Port Scanner, WHOIS, NIK Checker,
+IP Location, dan utilitas network lainnya berbasis API.
+</p>
+
       </div>
 
       <div class="tools-grid">
